--- a/shop/style.css
+++ b/shop/style.css
@@ -3,19 +3,15 @@
     width: fit-content;
 }
 
-.app-btn-primary {
-    --bs-btn-color: var(--color-cornsilk);
-    --bs-btn-bg: var(--color-earth-yellow) !important;
-    --bs-btn-border-color: var(--color-earth-yellow) !important;
-    --bs-btn-hover-color: var(--color-cornsilk);
-    --bs-btn-hover-bg: var(--color-tigers-eye) !important;
-    --bs-btn-hover-border-color: var(--color-earth-yellow) !important;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--color-cornsilk);
-    --bs-btn-active-bg: var(--color-tigers-eye) !important;
-    --bs-btn-active-border-color: var(--color-earth-yellow) !important;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: var(--color-cornsilk);
-    --bs-btn-disabled-bg: var(--color-earth-yellow) !important;
-    --bs-btn-disabled-border-color: var(--color-earth-yellow) !important;
+.search-bar {
+    position: relative; /* já está */
+}
+
+#suggestions {
+    z-index: 1000; /* valor alto suficiente */
+    background-color: white; /* importante para não ficar transparente */
+    max-height: 300px; /* opcional, para limitar altura */
+    overflow-y: auto;    /* scrollbar se necessário */
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
 }
